<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:button="@drawable/apptheme_btn_radio_holo_light"
                android:checked="false"
                android:text="@string/r1"
                android:textSize="24sp"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:button="@drawable/apptheme_btn_radio_holo_light"
                android:checked="false"
                android:text="@string/r2"
                android:textSize="24sp"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/apptheme_btn_radio_holo_light"
                android:checked="false"
                android:text="@string/r3"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLaps"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="normal|bold|italic"
                    />

                <SeekBar
                    android:id="@+id/seekLaps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="19"
                    android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                    android:thumbTint="#33B5E5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb20"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="normal|bold|italic"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGates"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb2"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="normal|bold|italic"
                    />

                <SeekBar
                    android:id="@+id/seekGates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="8"
                    android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                    android:thumbTint="#33B5E5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb10"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="normal|bold|italic"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llKills"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvKills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="normal|bold|italic"
                    />

                <SeekBar
                    android:id="@+id/seekKills"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="29"
                    android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                    android:thumbTint="#33B5E5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb30"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="normal|bold|italic"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button_selector"
        android:padding="-8dp"
        android:shadowColor="#111111"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/start"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"/>

</FrameLayout>