<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:orientation="horizontal"
        android:paddingEnd="70dp"
        android:paddingStart="70dp">

        <TextView
            android:id="@+id/tvExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="#fff"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
        >

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:shadowColor="#111111"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/buttonYes"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="normal|bold|italic"/>

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:shadowColor="#111111"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/buttonNo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="normal|bold|italic"/>

    </LinearLayout>


</LinearLayout>
