<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_bg"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:labelFor="@+id/editText"
            android:shadowColor="#111111"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/enterName"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-35dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="-40dp"
        android:contentDescription="@string/truck"
        android:src="@drawable/image1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="60dp"
                android:shadowColor="#500"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/r"
                android:textAlignment="center"
                android:textColor="#A00"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="255"
                android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                android:thumbTint="#F00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="60dp"
                android:shadowColor="#050"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/g"
                android:textAlignment="center"
                android:textColor="#0A0"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"/>

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="255"
                android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                android:thumbTint="#0F0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="60dp"
                android:shadowColor="#005"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/b"
                android:textAlignment="center"
                android:textColor="#00A"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"/>

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="255"
                android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                android:thumbTint="#00F"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:padding="-8dp"
        android:shadowColor="#111111"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/ok"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

</LinearLayout>